test/should_fail/param_002.grg
actions param_002 using attrib_model_001;

rule r (ni : NINT, nb : NBOOL, nf : NFLOAT, nd : NDOUBLE, ns : NSTRING) : (NINT) {
	pattern {
		zi : NINT;
		ni;
	}
	replace {
		xi : NINT;
		return (ni);
	}
}

